tests/spec/parse/snapshots/brace_after_binary_is_block.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() {
    let a = 1;
    let b = 2;
    let x = 3;
    a + b { x }
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "a",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 19,
                                    byte_length: 1,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Literal {
                            literal: Integer {
                                value: 1,
                                text: None,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 23,
                                byte_length: 1,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 9,
                        },
                    },
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "b",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 32,
                                    byte_length: 1,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Literal {
                            literal: Integer {
                                value: 2,
                                text: None,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 36,
                                byte_length: 1,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 28,
                            byte_length: 9,
                        },
                    },
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "x",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 45,
                                    byte_length: 1,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Literal {
                            literal: Integer {
                                value: 3,
                                text: None,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 49,
                                byte_length: 1,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 41,
                            byte_length: 9,
                        },
                    },
                    Binary {
                        operator: Addition,
                        left: Identifier {
                            value: "a",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 54,
                                byte_length: 1,
                            },
                            resolution: Unresolved,
                        },
                        right: Identifier {
                            value: "b",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 58,
                                byte_length: 1,
                            },
                            resolution: Unresolved,
                        },
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 54,
                            byte_length: 5,
                        },
                    },
                    Block {
                        items: [
                            Identifier {
                                value: "x",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 62,
                                    byte_length: 1,
                                },
                                resolution: Unresolved,
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 60,
                            byte_length: 5,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 56,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 66,
        },
    },
]
