tests/spec/parse/snapshots/brace_after_call_is_block.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn get_value() -> int { 1 }
  fn test() {
    let x = 1;
    get_value() { x }
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "get_value",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 9,
        },
        generics: [],
        params: [],
        return_annotation: Constructor {
            name: "int",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 19,
                byte_length: 3,
            },
        },
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Literal {
                        literal: Integer {
                            value: 1,
                            text: None,
                        },
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 25,
                            byte_length: 1,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 23,
                    byte_length: 5,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 27,
        },
    },
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 32,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "x",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 47,
                                    byte_length: 1,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Literal {
                            literal: Integer {
                                value: 1,
                                text: None,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 51,
                                byte_length: 1,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 43,
                            byte_length: 9,
                        },
                    },
                    Call {
                        expression: Identifier {
                            value: "get_value",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 56,
                                byte_length: 9,
                            },
                            resolution: Unresolved,
                        },
                        args: [],
                        spread: None,
                        type_arguments: None,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 56,
                            byte_length: 11,
                        },
                        call_kind: Unresolved,
                    },
                    Block {
                        items: [
                            Identifier {
                                value: "x",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 70,
                                    byte_length: 1,
                                },
                                resolution: Unresolved,
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 68,
                            byte_length: 5,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 39,
                    byte_length: 36,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 29,
            byte_length: 46,
        },
    },
]
